hphp/test/vm/clsmethod-ctx.php.expectf
Private in a
HipHop Fatal error: Call to private method a::priv from anonymous context in %s on line 15
